--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
         <link rel="manifest" href="/manifest.json" />
-        <title>refine authentication example</title>
+        <title>Manage Users</title>
     </head>
     <body>
         <noscript>You need to enable JavaScript to run this app.</noscript>
